// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stylelint resolution should resolve Stylelint using "stylelint.stylelintPath" 1`] = `
[
  {
    "code": "fake",
    "message": "Fake result",
    "range": {
      "end": {
        "character": 1,
        "line": 0,
      },
      "start": {
        "character": 0,
        "line": 0,
      },
    },
    "severity": 1,
    "source": "Stylelint",
  },
]
`;

exports[`Stylelint resolution should resolve Stylelint using PnP 1`] = `
[
  {
    "code": "fake",
    "message": "Fake result from yarn-pnp",
    "range": {
      "end": {
        "character": 1,
        "line": 0,
      },
      "start": {
        "character": 0,
        "line": 0,
      },
    },
    "severity": 1,
    "source": "Stylelint",
  },
]
`;

exports[`Stylelint resolution should resolve Stylelint using Yarn 2.x PnP 1`] = `
[
  {
    "code": "fake",
    "message": "Fake result from yarn-2-pnp",
    "range": {
      "end": {
        "character": 1,
        "line": 0,
      },
      "start": {
        "character": 0,
        "line": 0,
      },
    },
    "severity": 1,
    "source": "Stylelint",
  },
]
`;

exports[`Stylelint resolution should resolve Stylelint using local node_modules 1`] = `
[
  {
    "code": "fake",
    "message": "Fake result from resolve-local",
    "range": {
      "end": {
        "character": 1,
        "line": 0,
      },
      "start": {
        "character": 0,
        "line": 0,
      },
    },
    "severity": 1,
    "source": "Stylelint",
  },
]
`;
